--- a/Milestone 03/index.html
+++ b/Milestone 03/index.html
@@ -3,12 +3,12 @@
    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width ,initial-scale=1.0">
-    <title><i>Dynamic Resume Builder</i></title>
+    <title>Dynamic Resume Builder</title>
     <link rel="stylesheet" href="style.css">
 
    </head>
  <body>
-    <h1>Dynamic Resume Builder By Hafsa Aslam</h1>
+    <h1><i>Dynamic Resume Builder By Hafsa Aslam</i></h1>
     <form id="resume-form">
     <fieldset>
         <legend>Personal Information</legend>
